--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.5",
     "@react-google-maps/api": "^2.20.3",
     "@shadcn/ui": "^0.0.4",
     "bcryptjs": "^2.4.3",
